# SOSim

./: .gitignore  Cargo.toml  README.md  TIPE.drawio  tests_passed.txt
administrative/: README.md  othermemsim.txt  sujet.txt
bitmodes/: 32b.json  64b.json
lang_test/: first.sos  output
src/: lib.rs  main.rs
src/allocator/: mod.rs
src/ext/: mod.rs
src/fault/: mod.rs
src/lang/: event.rs  mod.rs  parse.rs  script.rs  toplevel.rs
src/mem/: addr.rs  config.rs  display.rs  mod.rs  paging.rs  stack.rs
src/paging/: ext.rs  mod.rs
src/proc/: mod.rs
src/process/: mod.rs
toplevel/: client.py  input.py  net_cfg
