[package]
name = "sosim"
version = "0.1.0"
edition = "2024"

[features]
bit8 = []
bit16 = []
bit32 = []
bit64 = []
default = ["bit32"]

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
lazy_static = "1.5.0"
# egui = "0.31.1"
num = "0.4.3"
num_cpus = "1.17.0"
peg = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.23.0", features = ["full"]}
winit = "0.30.12"
